RESOLVED FIXED18470
Cairo/Curl build has problems in WebError.cpp
https://bugs.webkit.org/show_bug.cgi?id=18470
Summary Cairo/Curl build has problems in WebError.cpp
Daniel Zucker
Reported 2008-04-13 21:52:04 PDT
This is a very small change. Fix is attached.
Attachments
small fix for cairo/curl build error (1.18 KB, patch)
2008-04-13 21:53 PDT, Daniel Zucker
aroben: review+
Daniel Zucker
Comment 1 2008-04-13 21:53:39 PDT
Created attachment 20517 [details] small fix for cairo/curl build error
Adam Roben (:aroben)
Comment 2 2008-04-14 08:02:56 PDT
Comment on attachment 20517 [details] small fix for cairo/curl build error r=me
Matt Lilek
Comment 3 2008-04-23 10:47:03 PDT
Landed in r32441.
Note You need to log in before you can comment on or make changes to this bug.