2008-04-23  Daniel Zucker  <zucker@wake3.com>

Reviewed by Adam Roben.

        Move the location of #if USE(CFNETWORK) to fix a cairo/curl build error.
        <https://bugs.webkit.org/show_bug.cgi?id=18470>

        * WebError.cpp:
        (WebError::sslPeerCertificate):



Canonical link: https://commits.webkit.org/25751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32441 268f45cc-cd09-0410-ab3c-d52691b4dbfc